Ok so don't ever auto format BTM, got it